Bug 834446 - [Browser] Truncated Bookmark Label

--- a/apps/browser/style/browser.css
+++ b/apps/browser/style/browser.css
@@ -618,19 +618,19 @@ li[role="tab"] {
 }
 
 li[role="tab"] a {
-  display: block;
   float: left;
-  height: 36px;
+  max-width: calc(33% - 3.9rem);
+  height: 3.6rem;
+  margin-left: -3rem;
+  padding: 0 3rem;
   text-decoration: none;
   color: #000;
-  line-height: 36px;
+  font-size: 1.3rem;
+  line-height: 3.6rem;
+  letter-spacing: -0.02rem;
   text-align: center;
-  padding: 0 30px;
-  font-size: 1.4rem;
-  outline: none;
-  margin-left: -30px;
   text-overflow: ellipsis;
-  max-width: calc(33% - 39px);
+  outline: none;
   overflow: hidden;
 }
 
@@ -968,7 +968,7 @@ li[role="listitem"] small {
  }
 
 /* This is a dirty hack to hide the bottom toolbar while
- * the keyboard is active, than device-height - 40px 
+ * the keyboard is active, than device-height - 40px
  * (for status bar/mini attention screen),
  * then the keyboard is likely activated
  */
